--- a/Kangelased/Kangelased/Kangelased.csproj
+++ b/Kangelased/Kangelased/Kangelased.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Kangelane.cs" />
+    <Compile Include="Kangelase andmed.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperKangelane.cs" />
