--- a/Kangelased/Kangelased/Kangelased.csproj
+++ b/Kangelased/Kangelased/Kangelased.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISuperV6ime.cs" />
     <Compile Include="Kangelane.cs" />
     <Compile Include="Kangelase andmed.cs" />
     <Compile Include="Program.cs" />
