--- a/Kangelased/Kangelased/Kangelased.csproj
+++ b/Kangelased/Kangelased/Kangelased.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HeaKangelane.cs" />
     <Compile Include="ISuperV6ime.cs" />
     <Compile Include="Kangelane.cs" />
     <Compile Include="Kangelase andmed.cs" />
+    <Compile Include="PahaKangelane.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperKangelane.cs" />
